# snake

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  config.example.yml  go.mod  go.sum  main.go
cmd/snake-app/: main.go
cmd/snake-data/: main.go
docker/: Dockerfile  compose.yml
docker/snake-app/: Dockerfile  compose.yml
docker/snake-data/: .example.env  .snake.example.env  Dockerfile  compose.yml
entities/: Cargo.toml
entities/src/kline/: mod.rs  proc.rs
internal/backtest/: backtest.go  backtest_result.html  backtest_test.go  convert.go
internal/indicates/: indicate.go
internal/indicates/bolling-band/: README.md  bb.go  bb_test.go
internal/indicates/donchian-channel/: README.md  dc.go  dc_test.go
internal/indicates/ema/: ema.go  ema_test.go  impl_indicater.go
internal/indicates/ma/: README.md  impl_indicater.go  ma.go  ma_test.go
internal/indicates/macd/: README.md  macd.go  macd_test.go
internal/indicates/rsi/: README.md  rsi.go  rsi_test.go
internal/kline/: models.go  prelude.go  repository.go
internal/kline/acl/: api_db.go  db_service.go  stream_db.go  stream_service.go
internal/kline/handler/: intervalHandler.go  wsKline.go
internal/kline/interval/: interval.go
internal/kline/repository/: checkMissing.go  first.go  insert.go  last.go  list.go  list_all.go  repo.go
internal/kline/utils/: utils.go  utils_test.go
internal/kline/workers/: dataChecker.go  intervalTrigger.go  storeKline.go  uptodateKline.go
internal/models/: kline.go
internal/repository/: kline.go
internal/server/: config.go  server-repo.go  server.go
internal/server/config/: config.go
internal/service/: config.go  repository.go
internal/strategy/: repository.go  strategy.go
internal/types/: signal.go
pkg/binance/: config.go  market.go
pkg/broadcast/: broadcast.go
pkg/math/: math.go
sql/: kline.sql  mysql_kline.sql
src/: lib.rs  main.rs
src/cexs/: README.md  config.rs  mod.rs
src/models/: kline.rs
src/pkg/: mod.rs
src/server/: clients.rs  config.rs  mod.rs  run.rs  server.rs
src/service/: config.rs  init.rs  mod.rs  prelude.rs
src/storage/: repository.rs
tests/: integration_test.rs
(+95 files in other folders)
