[workspace]
members = [".", "entities"]

[package]
name = "snake"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
influxdb = { version = "0.7.2", features = ["derive"] }
chrono = "0.4"
sea-orm = { version = "1.1.7", features = [
	"sqlx-mysql",
	"runtime-tokio-rustls",
	"macros",
] }
sea-query = "0.32.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "mysql"] }
tempfile = "3.8"
flexi_logger = "0.29.8"
serde_yaml_ok = "0.9.36"
clap = { version = "4.5.32", features = ["derive"] }
binance_spot_connector_rust = { version = "1.3.0", features = ["full"] }
hyper = { version = "0.14.32", features = ["full"] }
hyper-tls = "0.5.0"
binance = "0.21.0"
rust_decimal = { version = "1.37.0", features = ["macros"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.21"
tungstenite = "0.26.2"
diesel = { version = "2.2.8", features = ["chrono", "mysql", "r2d2", "time"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "mysql", "r2d2"] }
diesel-dynamic-schema = { version = "0.2.3", features = ["mysql"] }
rs-pkg = "0.0.1"

[dev-dependencies]
tempfile = "3.8"
